Canola automation chain: fan harvest, vacuum->hopper, grinder lube; fix centrifuge gear
- Fan: crop harvesting was an EMPTY stub (crop hardcoded false, harvest() no-op).
  Now detects any CropBlock (vanilla crops + the canola crop) at max age, drops
  its products (keeping one canola seed to replant), and resets it to age 0 — so
  a fan over a canola field sustainably produces seeds.
- Vacuum: now implements HasItemHandler, exposing its collected-items inventory as
  the Capabilities.Item.BLOCK cap so an adjacent hopper/chest/pipe can pull the
  vacuumed drops out (vacuum -> hopper -> grinder automation). InventoriedPower
  Receiver didn't implement it, so the cap lambda returned null before.
- Grinder: the BE already mills canola seeds into lubricant (fills its tank), but
  that wasn't visible in JEI. Added a display-only synthetic grinder entry showing
  canola seeds -> lubricant fluid.
- Centrifuge recipe fix: 'g' was HSLA_STEEL_GEAR (base gear); the real legacy
  ingredient is GEARUNIT4 = HSLA_STEEL_GEAR_4x. Corrected.